src/test/deca/syntax/invalid/sansobjet/ModuloInt.deca
// 
// Description: test modulo incorrecte
// Resultat: erreur ligne 5: pas de deuxieme terme
{
    int i = 1%;
}
